--- a/core/src/main/resources/i18n/spark_i18n_cs.properties
+++ b/core/src/main/resources/i18n/spark_i18n_cs.properties
@@ -121,6 +121,7 @@ checkbox.enable.emoticons = Povolit Sm&ajlíky
 checkbox.use.system.look.and.feel = Použít &barvy a prostředí systému (Potřebuje restart)
 checkbox.notify.user.goes.offline = Oznámit když uživatel odejde offline.
 checkbox.notify.user.comes.online = Oznámit když uživatel přijde online.
+checkbox.close.unread.message = Při zavírání okna se zeptejte, zda existují nepřečtené zprávy
 
 
 label.user.on.public.network = Uživatel je na veřejné síti
@@ -233,6 +234,7 @@ message.end.chat = Přejete si ukončit tento chat?
 message.close.this.chat = Zavřít tento chat
 message.close.other.chats = Zavřít všechny ostatní chaty
 message.close.stale.chats = Zavřít zvětralé chaty
+message.close.unread.window = Máte nepřečtené zprávy, opravdu chcete zavřít okno?
 message.last.message.received = Poslední zpráva přijata v {0}
 message.shared.group = Sdílená skupina
 message.is.shared.group = {0} je sdílená skupina.
