--- a/core/src/main/resources/i18n/spark_i18n_de.properties
+++ b/core/src/main/resources/i18n/spark_i18n_de.properties
@@ -170,6 +170,7 @@ checkbox.transport.tab.setting = Verfügbare Transports in einem Tab an anzeigen
 checkbox.conference.tab.setting = Konferenzreiter anzeigen (benötigt Neustart von Spark)
 checkbox.use.hostname.as.resource = Hostnamen als Ressource verwenden
 checkbox.use.version.as.resource = Spark-Version als Ressource verwenden
+checkbox.close.unread.message =Beim Schließen des Fensters fragen, ob ungelesene Nachrichten vorhanden sind
 
 delete.log.permanently = Protokolle permanent löschen
 delete.permanently = Permanent löschen?
@@ -450,6 +451,7 @@ message.end.chat = Soll dieser Chat beendet werden?
 message.close.this.chat = Diesen Chat schließen
 message.close.other.chats = Alle anderen Chats schließen
 message.close.stale.chats = Inaktive Chats schließen
+message.close.unread.window = Sie haben ungelesene Nachrichten, möchten Sie das Fenster wirklich schließen?
 message.last.message.received = Letzte Nachricht empfangen um {0}
 message.shared.group = Gemeinsame Gruppen
 message.is.shared.group = {0} ist eine gemeinsame Gruppe.
