--- a/core/src/main/resources/i18n/spark_i18n_es.properties
+++ b/core/src/main/resources/i18n/spark_i18n_es.properties
@@ -122,6 +122,7 @@ checkbox.use.compression = Usar Co&mpresión
 checkbox.use.proxy.server = &Usar servidor Proxy
 checkbox.use.system.look.and.feel = Usar apariencia del sistema (Requiere reiniciar)
 checkbox.window.to.front = &Traer ventana al frente
+checkbox.close.unread.message = Preguntar al cerrar la ventana si hay mensajes sin leer
 close = Cerrar
 create = Crear
 date = Fecha
@@ -359,6 +360,7 @@ message.client.information = Información del cliente para {0}
 message.close.other.chats = Cerrar demás conversaciones
 message.close.stale.chats = Cerrar conversaciones viejas
 message.close.this.chat = Cerrar esta chat
+message.close.unread.window = Tiene mensajes sin leer, ¿está seguro de que desea cerrar la ventana?
 message.conference.info.error = No se ha podido obtener información de la conferencia. Intente nuevamente en un momento.
 message.conference.service.error = No se ha podido encontrar el servicio de conferencia.
 message.confirm.destruction.of.room = Al destruir el cuarto los usuarios seran eliminados del cuarto. ¿Continuar?
