--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -160,6 +160,7 @@ checkbox.use.pki.authentication = Käytä PKI tunnistautumista
 checkbox.disable.prev.chat.history = E&stä aiempien keskustelujen näyttäminen
 checkbox.notify.typing.systemtray = &Näytä kirjoitushälytys tehtäväpalkissa
 checkbox.notify.systemtray = Näytä uudet &viestit tehtäväpalkissa
+checkbox.close.unread.message = Kysy, kun suljet ikkunan, jos sinulla on lukemattomia viestejä
 
 label.user.on.public.network = Käyttäjä julkisessa verkossa
 label.change.password.to = &Uusi salasana
@@ -304,6 +305,7 @@ message.end.chat = Lopetetaanko ryhmäkeskustelu?
 message.close.this.chat = Sulje tämä ryhmäkeskustelu
 message.close.other.chats = Sulje muut ryhmäkeskustelut 
 message.close.stale.chats = Sulje pitkään hiljaisena olleet huoneet
+message.close.unread.window = Sinulla on lukemattomia viestejä. Haluatko varmasti sulkea ikkunan?
 message.last.message.received = Viimeisin viesti vastaanotettu {0}
 message.shared.group = Jaettu ryhmä
 message.is.shared.group = {0} on jaettu ryhmä.
