--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -180,6 +180,7 @@ checkbox.use.specify.below = Indiquer ci-dessous
 checkbox.use.pki.authentication = Utiliser l'authentification par PKI
 checkbox.transport.tab.setting = Montrer les types de transports disponibles dans un onglet (redémarrage nécessaire)
 checkbox.conference.tab.setting =  Montrer les services de conférence disponibles dans un onglet (redémarrage nécessaire)
+checkbox.close.unread.message = Demander à la fermeture de la fenêtre s'il y a des messages non lus
 
 delete.log.permanently = Effacer les logs définitivement
 delete.permanently = Effacer définitivement?
@@ -466,6 +467,7 @@ message.client.information = Infos client de {0}
 message.close.other.chats = Fermer les autres chats
 message.close.stale.chats = Fermer les chats suspendus
 message.close.this.chat = Fermer ce chat
+message.close.unread.window = Vous avez des messages non lus, êtes-vous sûr de vouloir fermer la fenêtre ?
 message.conference.info.error = Impossible d'obtenir des infos sur cette conférence. Veuillez réessayer plus tard.
 message.conference.service.error = Service de conférence introuvable.
 message.confirm.destruction.of.room = Supprimer le salon en enlève aussi tous ses utilisateurs. Continuer?
