--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -172,6 +172,7 @@ checkbox.use.hostname.as.resource = Usa hostname come risorsa
 checkbox.use.version.as.resource = Usa versione di Spark come risorsa
 checkbox.accept.all.certificates = Accetta tutti i certificati (self-signed/expired/not trusted)
 checkbox.disable.hostname.verification = Disabilita la verifica dell'hostname del certificato (non consigliato)
+checkbox.close.unread.message = Chiedi quando chiudi la finestra se ci sono messaggi non letti
 
 delete.log.permanently = Elimina definitivamente log
 delete.permanently = Eliminare definitivamente?
@@ -456,6 +457,7 @@ message.client.information = Informazioni sul client di {0}
 message.close.other.chats = Chiudi tutte le altre chat
 message.close.stale.chats = Chiudi le chat inattive
 message.close.this.chat = Termina questa chat
+message.close.unread.window = Hai messaggi non letti, sei sicuro di voler chiudere la finestra?
 message.conference.info.error = Impossibile ottenere delle informazioni sulla stanza. Riprova più tardi.
 message.conference.service.error = Impossibile avviare il servizio conferenze.
 message.confirm.destruction.of.room = Se elimini la stanza, disconnetterai tutti gli utenti presenti. Vuoi continuare?
