--- a/core/src/main/resources/i18n/spark_i18n_ko.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ko.properties
@@ -155,6 +155,7 @@ checkbox.use.krbconf = Use krb5.conf or krb5.ini
 checkbox.use.krb.dns = DNS 사용
 checkbox.use.specify.below = 아래 입력
 checkbox.use.pki.authentication = PKI 인증 사용
+checkbox.close.unread.message = 읽지 않은 메시지가 있으면 창을 닫을 때 확인
 
 delete.log.permanently = 영구히 로그 삭제
 delete.permanently = 영구히 삭제하시겠습니까?
@@ -416,6 +417,7 @@ message.client.information = {0}의 클라이언트 정보
 message.close.other.chats = 모든 대화창 닫기
 message.close.stale.chats = 오래된 채팅 닫기
 message.close.this.chat = 현재 채팅창 닫기
+message.close.unread.window = 읽지 않은 메시지가 있습니다. 창을 닫으시겠습니까?
 message.conference.info.error = 회의 정보를 검색할 수없습니다. 잠시 후 다시 시도해주십시오.
 message.conference.service.error = 회의 서비스가 존재하지 않습니다.
 message.confirm.destruction.of.room = 없어진 방의 모든 사용자는 이 방으로 부터 삭제 됩니다. 계속하시겠습니까?
