--- a/core/src/main/resources/i18n/spark_i18n_ky.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ky.properties
@@ -124,6 +124,7 @@ checkbox.use.proxy.server= Pro&xy серверди колдонуу
 checkbox.use.specify.below=Төмөндө көрсөтүү
 checkbox.use.system.look.and.feel= Темаларды колдонуу (System Look And &Feel) (программаны кайрадан баштоо керек)
 checkbox.window.to.front=&Терезени алдыга алып келүү
+checkbox.close.unread.message = Терезени жаап жатканда окула элек билдирүүлөр бар-жогун сураңыз
 close=Жабуу
 create= Түзүү
 date= Дата
@@ -374,6 +375,7 @@ message.client.information={0} үчүн клиент маалыматы
 message.close.other.chats=Башка чаттарды жабуу
 message.close.stale.chats=Эскирген чаттарды жабуу
 message.close.this.chat=Бул чатты жабуу
+message.close.unread.window = Сизде окула элек билдирүүлөр бар, чын эле терезени жапкыңыз келеби?
 message.conference.info.error= Конференфия жөнүндө маалымат алуу мүмкүн эмес. Кийинчерек кайталап көрүңүз.
 message.conference.service.error=Конференция кызматы табылган жок.
 message.confirm.destruction.of.room=Бузулуучу бөлмөдө бар болгон колдонуучулар бөлмөдөн айдалынып салынат. Улантуу?
