--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -193,6 +193,7 @@ checkbox.check.ocsp = Patikrinti OCSP
 checkbox.allow.soft.fail = Leisti "soft fail" politiką
 checkbox.on.exception.list = Išimčių sąraše
 checkbox.filetransfer.ibb.only = Naudoti tik In-Band Bytestreams
+checkbox.close.unread.message = Prieš uždarydami langą paklauskite, ar yra neskaitytų pranešimų
 radio.encryptionmode.required = Privaloma
 radio.encryptionmode.ifpossible = Jeigu įmanoma
 radio.encryptionmode.disabled = Išjungta
@@ -498,6 +499,7 @@ message.client.information = Kliento informacija {0}
 message.close.other.chats = Užverti visus kitus pokalbius
 message.close.stale.chats = Užverti nevykstančius pokalbius
 message.close.this.chat = Užverti šį pokalbį
+message.close.unread.window = Turite neskaitytų pranešimų. Ar tikrai norite uždaryti langą?
 message.conference.info.error = Nepavyko gauti informacijos apie konferenciją. Prašom pabandyti vėliau.
 message.conference.service.error = Nepavyksta rasti konferencijos.
 message.confirm.destruction.of.room = Šalinant kambarį, bus pašalinti ir visi jame esantys abonentai. Tęsti?
