--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -147,6 +147,7 @@ checkbox.use.proxy.server = Proxy &server gebruiken
 checkbox.window.to.front = &Breng venster naar voren
 checkbox.filetransfer.ibb.only = Uitsluitend In-Band Bytestreams
 checkbox.filetransfer.autoaccept.presence = Accepteer verzoeken van bekende contacten autoatisch
+checkbox.close.unread.message = Vraag bij het sluiten van het venster of er ongelezen berichten zijn
 
 group.chat.window.information = Conversatievenster informatie
 group.comma.delimited = Komma-gescheiden
@@ -359,6 +360,7 @@ message.client.information = Client informatie van {0}
 message.close.other.chats = Sluit alle andere conversaties
 message.close.stale.chats = Sluit bevroren conversaties
 message.close.this.chat = Sluit deze conversatie
+message.close.unread.window = U heeft ongelezen berichten, weet u zeker dat u het venster wilt sluiten?
 message.conference.info.error = Informatie over de conferentie kon niet worden verkregen worden. Probeer a.u.b. later nog eens.
 message.conference.service.error = Kon de conferentiedienst niet vinden.
 message.confirm.destruction.of.room = Bij het opheffen van de ruimte worden alle gebruikers uit de ruimte verwijderd. Doorgaan?
