--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -192,6 +192,7 @@ checkbox.check.crl = Sprawdzaj CRL
 checkbox.check.ocsp = Sprawdzaj OCSP
 checkbox.allow.soft.fail = Zezwalaj na lekką politykę błędów
 checkbox.on.exception.list = Włącz listę wyjątków
+checkbox.close.unread.message = Pytaj przy zamykaniu okna, jeśli są nieprzeczytane wiadomości
 radio.encryptionmode.required = Wymagany
 radio.encryptionmode.ifpossible = Jeśli możliwy
 radio.encryptionmode.disabled = Wyłączony
@@ -497,6 +498,7 @@ message.client.information = Informacja o kliencie użytkownika {0}
 message.close.other.chats = Zamknij wszystkie pozostałe okna rozmowy
 message.close.stale.chats = Zamknij nieaktywne okna rozmowy
 message.close.this.chat = Zamknij to okno rozmowy
+message.close.unread.window = Masz nieprzeczytane wiadomości, czy na pewno chcesz zamknąć okno?
 message.conference.info.error = Nie można uzyskać informacji o konferencji, spróbuj ponownie później
 message.conference.service.error = Nie można zlokalizować usługi konferencji
 message.confirm.destruction.of.room = Usunięcie pokoju rozłączy wszystkich uczestników, kontynuować?
