--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -119,6 +119,7 @@ checkbox.split.chat.window = Encaixar &janelas (Necessário reiniciar)
 checkbox.notify.user.goes.offline = Notificar quando usuário ficar offline
 checkbox.notify.user.comes.online = Notificar quando usuário ficar online
 checkbox.use.system.look.and.feel = Usar gráficos do sistema (Necessário reiniciar)
+checkbox.close.unread.message = Perguntar ao fechar a janela se há mensagens não lidas
 
 label.change.password.to = &Trocar senha para
 label.chatroom.fontsize = Tamanho da fonte no Chat:
@@ -229,6 +230,7 @@ message.end.chat = Você deseja terminar este Chat?
 message.close.this.chat = Fechar este Chat
 message.close.other.chats = Fechar os outros Chats
 message.close.stale.chats = Fechar Chats obsoletos
+message.close.unread.window = Você tem mensagens não lidas. Tem certeza de que deseja fechar a janela?
 message.last.message.received = última mensagem recebida em {0}
 message.shared.group = Grupo compartilhado
 message.is.shared.group = {0} é um grupo compartilhado.
