--- a/core/src/main/resources/i18n/spark_i18n_sv.properties
+++ b/core/src/main/resources/i18n/spark_i18n_sv.properties
@@ -123,7 +123,7 @@ checkbox.enable.emoticons = Tillått Kä&nsloikoner
 checkbox.use.system.look.and.feel = Använd systemet utseende (kräver omstart)
 checkbox.notify.user.goes.offline = Meddela när en användare loggar ut.
 checkbox.notify.user.comes.online = Meddela när en användare loggar in.
-
+checkbox.close.unread.message = Fråga när du stänger fönstret om det finns olästa meddelanden
 
 label.user.on.public.network = Användaren är på ett publikt nätverk
 label.change.password.to = &Byt lösenord till
@@ -237,6 +237,7 @@ message.end.chat = Vill du avsluta denna chatt?
 message.close.this.chat = Stänga denna chatt
 message.close.other.chats = Stänga alla andra chattfönster
 message.close.stale.chats = Stäng inaktiva chattfönster
+message.close.unread.window = Du har olästa meddelanden, är du säker på att du vill stänga fönstret?
 message.last.message.received = Senaste meddelande togs emot {0}
 message.shared.group = Delade grupper
 message.is.shared.group = {0} är en delad grupp.
