--- a/core/src/main/resources/i18n/spark_i18n_tr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_tr.properties
@@ -149,6 +149,7 @@ checkbox.use.proxy.server = &Vekil sunucu kullan
 checkbox.use.system.look.and.feel = Sistem arayüz görünümünü kullan (yeniden başlatılmalı)
 checkbox.window.to.front = &Pencereyi öne getir
 checkbox.broadcast.hide.offline.user = Çevrimdışı kullanıcıları gizle
+checkbox.close.unread.message = Pencereyi kapatırken okunmamış mesaj olup olmadığını sor
 
 delete.log.permanently = Günlükleri kalıcı olarak sil
 delete.permanently = Kalıcı olarak silinsin mi?
@@ -382,6 +383,7 @@ message.client.information = {0} için bağlantı bilgisi
 message.close.other.chats = Diğer tüm sohbetleri kapat
 message.close.stale.chats = Hareketsiz sohbetleri kapat
 message.close.this.chat = Bu sohbeti kapat
+message.close.unread.window = Okunmamış mesajlarınız var, pencereyi kapatmak istediğinizden emin misiniz?
 message.conference.info.error = Konferans bilgisi alınamadı. Lütfen sonra tekrar deneyin.
 message.conference.service.error = Konferans servisi konumlandırılamadı.
 message.confirm.destruction.of.room = Oda yok ediliyor, odadaki tüm kullanıcılar silinir, devam edilsin mi?
