--- a/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
@@ -170,6 +170,7 @@ checkbox.use.krb.dns	=	使用DNS
 checkbox.use.specify.below	=	指定方式如下
 checkbox.transport.tab.setting	=	在標籤中顯示可用的傳輸服務(需重新啟動 Spark)
 checkbox.conference.tab.setting	=	在標籤中顯示會議服務(需重新啟動 Spark)
+checkbox.close.unread.message = 關閉窗口時詢問是否有未讀消息
 
 delete.log.permanently	=	永久刪除日誌
 delete.permanently	=	永久刪除嗎?
@@ -453,6 +454,7 @@ message.client.information = 客戶信息
 message.close.other.chats = 關閉所有其他的聊天
 message.close.stale.chats = 關閉之前的聊天記錄
 message.close.this.chat = 關閉這個聊天視窗
+message.close.unread.window = 您有未讀消息，確定要關閉窗口嗎？
 message.conference.info.error = 無法檢索會議信息,請稍後再試
 message.conference.service.error = 無法找到會議服務
 message.confirm.destruction.of.room = 刪除此會議室將使裡面的聯繫人離開,是否繼續?
