Add day and week periods for Transcript History

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -738,6 +738,8 @@ message.your.voice.revoked = Your voice has been revoked
 message.groupchat.require.password = This group chat room requires a password to enter
 message.groupchat.registered.member = Successfully registered with {0}
 message.search.for.history = Search conversation history
+message.search.period.day.one = one day per page
+message.search.period.week.one = one week per page
 message.search.period.month.one = one month per page
 message.search.period.year.one = one year per page
 message.search.period.none = show all on one page
