--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -668,6 +668,8 @@ message.your.voice.revoked = Ti è stato tolto il VOICE in questa chat.
 message.groupchat.require.password = Questa stanza richiede una password per poter entrare
 message.groupchat.registered.member = Registrato correttamento con {0}
 message.search.for.history = Cerca nello storico conversazioni
+message.search.period.day.one = un giorno per pagina
+message.search.period.week.one = una settimana per pagina
 message.search.period.month.one = un mese per pagina
 message.search.period.year.one = un anno per pagina
 message.search.period.none = mostra tutto in una pagina
