--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -721,6 +721,8 @@ message.your.voice.revoked = Anulowano twoje uprawnienia do rozmowy głosowej
 message.groupchat.require.password = Aby wejść do tego pokoju wymagane jest hasło
 message.groupchat.registered.member = Pomyślnie zarejestrowany w {0}
 message.search.for.history = Przeszukaj historię rozmowy
+message.search.period.day.one = jeden dzień na stronę
+message.search.period.week.one = tydzień na stronę
 message.search.period.month.one = miesiąc na stronie
 message.search.period.year.one = rok na stronie
 message.search.period.none = pokaż wszystko na stronie
