--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -738,6 +738,8 @@ message.your.voice.revoked = У Вас отняли право голоса.
 message.groupchat.require.password = Эта конференц-комната требует пароль для входа
 message.groupchat.registered.member = Успешно зарегистрирован с {0}
 message.search.for.history = Искать в истории разговоров
+message.search.period.day.one = один день на страницу
+message.search.period.week.one = одна неделя на страницу
 message.search.period.month.one = один месяц на страницу
 message.search.period.year.one = один год на страницу
 message.search.period.none = показать все на одной странице
