--- a/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
@@ -663,6 +663,8 @@ message.your.voice.revoked = 你的發言權已被撤銷
 message.groupchat.require.password = 這個群組會議室需要輸入密碼才能進入
 message.groupchat.registered.member = 註冊成功
 message.search.for.history = 查詢聊天的歷史記錄
+message.search.period.day.one = 每頁顯示一天的消息
+message.search.period.week.one = 每頁顯示一周的消息
 message.search.period.month.one = 每頁顯示一個月的訊息
 message.search.period.year.one = 每頁顯示一年的訊息
 message.search.period.none = 所有訊息顯示在一個頁面上
