--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -167,6 +167,7 @@ checkbox.split.chat.window = Dock windows (requires restart)
 checkbox.start.in.tray = &Start in system tray
 checkbox.click.single.tray = S&ingle click in system tray brings Spark to front (requires restart)
 checkbox.tabs.on.top = Chat tabs &appear on top (requires restart)
+checkbox.tabs.scroll = Use scroll for chat tabs (requires restart)
 checkbox.use.compression = Use compression
 checkbox.use.debugger.on.startup = Start debugger on startup
 checkbox.use.proxy.server = Use proxy server
