--- a/core/src/main/resources/i18n/spark_i18n_cs.properties
+++ b/core/src/main/resources/i18n/spark_i18n_cs.properties
@@ -116,6 +116,7 @@ checkbox.launch.on.startup = &Spustit při startu
 checkbox.start.in.tray = &Spustit v minimalizovaném režimu
 checkbox.split.chat.window = Dokovat &Okna (Potřebuje restart)
 checkbox.tabs.on.top = &Chat záložky nahoře (Potřebuje restart)
+checkbox.tabs.scroll = Pro karty chatu použít posouvání (Potřebuje restart)
 checkbox.allow.buzz = Povolit uživatelům pro&zvánět tě
 checkbox.enable.emoticons = Povolit Sm&ajlíky
 checkbox.use.system.look.and.feel = Použít &barvy a prostředí systému (Potřebuje restart)
