--- a/core/src/main/resources/i18n/spark_i18n_es.properties
+++ b/core/src/main/resources/i18n/spark_i18n_es.properties
@@ -118,6 +118,7 @@ checkbox.show.toaster = Mostrar ventana de &Avisos
 checkbox.split.chat.window = Fijar Ventanas (Requiere reiniciar)
 checkbox.start.in.tray = &Iniciar en la bandeja del sistema
 checkbox.tabs.on.top = Las solapas de &chat aparecen arriba (Requiere reiniciar)
+checkbox.tabs.scroll = Use el desplazamiento para las pestañas de chat (requiere reiniciar)
 checkbox.use.compression = Usar Co&mpresión
 checkbox.use.proxy.server = &Usar servidor Proxy
 checkbox.use.system.look.and.feel = Usar apariencia del sistema (Requiere reiniciar)
