--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -146,6 +146,7 @@ checkbox.notify.user.goes.offline = Ilmoita kun käyttäjä poistuu linjoilta
 checkbox.start.in.tray = &Käynnistä Spark piilotettuna
 checkbox.split.chat.window = &Erilliset keskusteluikkunat (vaatii uudelleenkäynnistyksen)
 checkbox.tabs.on.top = &Keskusteluvälilehdet aukeavat päällimmäisiksi (vaatii uudelleenkäynnistyksen)
+checkbox.tabs.scroll = Käytä vierittämistä chat-välilehdissä (vaatii uudelleenkäynnistyksen)
 checkbox.allow.buzz = Sal&li muiden käyttäjien painaa summeria.
 checkbox.enable.emoticons = Hy&miöt käytössä 
 checkbox.use.system.look.and.feel = Käytä järjestelmän &teemaa (vaatii uudelleenkäynnistyksen)
