--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -169,6 +169,7 @@ checkbox.show.toaster = Afficher une notification &Popup
 checkbox.split.chat.window = Réduire les &fenêtres (Nécessite de redémarrer Spark)
 checkbox.start.in.tray = &Démarrer dans la zone d'iconification
 checkbox.tabs.on.top = Fenêtre de discussion toujours visible (nécessite de redémarrer)
+checkbox.tabs.scroll = Utiliser le défilement pour les onglets de chat (nécessite un redémarrage)
 checkbox.use.compression = Utiliser la compression
 checkbox.use.debugger.on.startup = Lancer le débugger au démarrage
 checkbox.use.proxy.server = &Utiliser un Proxy
