--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -156,6 +156,7 @@ checkbox.sort.asc.history = Ordina messaggi per data crescente nella storia cont
 checkbox.split.chat.window = Dividi le &Finestre di chat (Richiede il riavvio di Spark)
 checkbox.start.in.tray = &Avvia Spark nella Tray Bar
 checkbox.tabs.on.top = Schede della &Chat appaiono in alto (Richiede il riavvio di Spark)
+checkbox.tabs.scroll = Usa lo scorrimento per le schede della chat (Richiede il riavvio di Spark)
 checkbox.use.compression = Usa Co&mpressione
 checkbox.use.debugger.on.startup = Avvia debugger all'avvio
 checkbox.use.proxy.server = &Usa Proxy Server
