--- a/core/src/main/resources/i18n/spark_i18n_ja.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ja.properties
@@ -115,6 +115,7 @@ checkbox.launch.on.startup = スタートアップと同時に起動する
 checkbox.start.in.tray = システムトレイでスタート
 checkbox.split.chat.window = ウィンドウをドックに入れる (再起動が必要)
 checkbox.tabs.on.top = チャットタブをトップに表示 (再起動が必要)
+checkbox.tabs.scroll = チャット タブのスクロールを使用する (再起動が必要)
 checkbox.allow.buzz = 通知音を許可する
 checkbox.enable.emoticons = アイコンを有効にする
 checkbox.use.system.look.and.feel = システムのルック＆フィールを用いる (再起動が必要)
