--- a/core/src/main/resources/i18n/spark_i18n_ko.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ko.properties
@@ -145,6 +145,7 @@ checkbox.show.toaster = 팝업으로 보이기
 checkbox.split.chat.window = Dock &Windows (프로그램 재시작시 적용)
 checkbox.start.in.tray = 시스템 트레이에 시작
 checkbox.tabs.on.top = 대화탭이 위에 보임 (프로그램 재시작시 적용)
+checkbox.tabs.scroll = 채팅 탭에 스크롤 사용 (프로그램 재시작시 적용)
 checkbox.use.compression = 압축 사용
 checkbox.use.debugger.on.startup = Start &Debugger on startup
 checkbox.use.proxy.server = Proxy 서버 사용
