--- a/core/src/main/resources/i18n/spark_i18n_ky.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ky.properties
@@ -115,6 +115,7 @@ checkbox.show.toaster= Ар бир &кабарламаны билдирүү
 checkbox.split.chat.window= Терезелерге &жабыштыруу (программаны кайрадан баштоо керек)
 checkbox.start.in.tray= &Системдик трейде баштоо
 checkbox.tabs.on.top= Чатты терезелердин үстүнөн ачуу (программаны кайрадан баштоо керек)
+checkbox.tabs.scroll = Чат өтмөктөрү үчүн сыдырууну колдонуңуз (программаны кайрадан баштоо керек)
 checkbox.use.compression=Use Co&mpression
 checkbox.use.debugger.on.startup=Башталышта &Debugger'ди баштоо
 checkbox.use.krb.dns=DNS колдонуу
