--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -167,6 +167,7 @@ checkbox.split.chat.window = Lango įt&virtinimas (reikės iš naujo paleisti pr
 checkbox.start.in.tray = &Startuoti sistemos juostelėje
 checkbox.click.single.tray = Vie&nas paspaudimas sistemos juostelėje pakelia Spark langą (reikės iš naujo paleisti programą)
 checkbox.tabs.on.top = &Pokalbių korteles rodyti viršuje (reikės iš naujo paleisti programą)
+checkbox.tabs.scroll = Naudokite slinktį pokalbių skirtukams (reikės iš naujo paleisti programą)
 checkbox.use.compression = Nau&doti suspaudimą
 checkbox.use.debugger.on.startup = S&tartavus įjungti klaidų paieškos veikseną
 checkbox.use.proxy.server = Na&udoti tarpinį serverį
