--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -142,6 +142,7 @@ checkbox.split.chat.window = Combineer &Vensters (Vereist herstart van Spark)
 checkbox.start.in.tray = Start in &systeemvak
 checkbox.use.system.look.and.feel = Gebruik de systeeminstellingen (Na herstart van Spark)
 checkbox.tabs.on.top = &Conversatie tabs altijd vooraan (Herstart vereist)
+checkbox.tabs.scroll = Scroll gebruiken voor chattabbladen (Herstart vereist)
 checkbox.use.compression = Gebruik &Compressie
 checkbox.use.proxy.server = Proxy &server gebruiken
 checkbox.window.to.front = &Breng venster naar voren
