--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -167,6 +167,7 @@ checkbox.split.chat.window = Podziel okna rozmów (wymagany restart)
 checkbox.start.in.tray = Wyświetlaj zakładki rozmów na górze (wymagany restart)
 checkbox.click.single.tray = Pojedyncze kliknięcie ikony w trayu wywołuje główne okno Sparka (wymagany restart)
 checkbox.tabs.on.top = Zakładki rozmowy na wierzchu (wymagany restart)
+checkbox.tabs.scroll = Użyj przewijania kart czatu (wymaga ponownego uruchomienia)
 checkbox.use.compression = Używaj kompresji
 checkbox.use.debugger.on.startup = Uruchom śledzenie błędów przy starcie
 checkbox.use.proxy.server = Użyj serwera proxy
