--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -636,6 +636,7 @@ button.tasks.all = Todas
 button.view.profile = Ver perfil
 checkbox.show.avatars.in.contactlist = Mostrar avatar na lista de contatos
 checkbox.tabs.on.top = Mostrar Chat no topo (Necessita reiniciar)
+checkbox.tabs.scroll = Use a rolagem para as guias de bate-papo (Necessita reiniciar)
 checkbox.use.compression = Usar compressão
 checkbox.filetransfer.ibb.only = Somente In-Band Bytestreams (IBB)
 delete.log.permanently = Apagar permanentemente
