--- a/core/src/main/resources/i18n/spark_i18n_sv.properties
+++ b/core/src/main/resources/i18n/spark_i18n_sv.properties
@@ -118,6 +118,7 @@ checkbox.launch.on.startup = &Autostart
 checkbox.start.in.tray = &Starta i meddelandefältet
 checkbox.split.chat.window = Docka &Fönstret (kräver omstart)
 checkbox.tabs.on.top = &Chat tabs appear on top (kräver omstart)
+checkbox.tabs.scroll = Använd scroll för chattflikar (kräver omstart)
 checkbox.allow.buzz = Tillåt användare ringa dig.
 checkbox.enable.emoticons = Tillått Kä&nsloikoner
 checkbox.use.system.look.and.feel = Använd systemet utseende (kräver omstart)
