--- a/core/src/main/resources/i18n/spark_i18n_tr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_tr.properties
@@ -144,6 +144,7 @@ checkbox.show.toaster = Show a &Toast Popup
 checkbox.split.chat.window = &Taşınabilir pencereler (yeniden başlatılmalı)
 checkbox.start.in.tray = &Sistem çekmecesinde başlat
 checkbox.tabs.on.top = Sohbet sekmelerini &öne getir (yeniden başlatılmalı)
+checkbox.tabs.scroll = Sohbet sekmeleri için kaydırmayı kullanın (yeniden başlatılmalı)
 checkbox.use.compression = Sı&kıştırma kullan
 checkbox.use.proxy.server = &Vekil sunucu kullan
 checkbox.use.system.look.and.feel = Sistem arayüz görünümünü kullan (yeniden başlatılmalı)
