--- a/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
@@ -143,6 +143,7 @@ checkbox.launch.on.startup	=	(&L) 開機時啟動 Spark
 checkbox.start.in.tray	=	(&S) 啟動後顯示至時間工具列內
 checkbox.split.chat.window	=	(&W) 聊天視窗倚靠桌面(需重新啟動 Spark)
 checkbox.tabs.on.top	=	(&C) 聊天視窗置頂(需重新啟動 Spark)
+checkbox.tabs.scroll = 為聊天選項卡使用滾動 (需重新啟動 Spark)
 checkbox.use.compression	=	使用壓縮
 checkbox.use.debugger.on.startup	=	在開機時啟動偵錯程序
 checkbox.allow.buzz	=	(&Z) 允許聯絡人主動給您發訊息
