ROAR Pluign Remove - requires restart. Add translation.

--- a/plugins/roar/src/main/resources/i18n/roar_i18n.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n.properties
@@ -1,11 +1,10 @@
-
 # Roar language file
 
 roar.settings = Roar Settings
 roar.enabled = Popups enabled
 roar.duration = Duration in ms (0 = infinite):
 roar.amount = Maximum popups on screen (0 = infinite):
-roar.location = Change popup starting location (requires restart)
+roar.location = Change popup starting location
 roar.display.topright = Top Right
 roar.display.bottomright = Bottom Right
 roar.background = Background color
