--- a/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
@@ -4,9 +4,26 @@ roar.settings = Paramètres Roar
 roar.enabled = Popups activés
 roar.duration = Durée en ms (0 = infini):
 roar.amount = Popups maximals affichés à l'écran (0 = infini):
-roar.location = Changer l'emplacement de départ du popup (nécessite un redémarrage)
+roar.location = Changer l'emplacement de départ du popup
 roar.display.topright = En haut à droite
 roar.display.bottomright = En bas à droite
 roar.background = Couleur de fond
+roar.background.group = Couleur de fond multi-utilisateurs
 roar.header = Couleur de l'entête
+roar.header.group = Couleur d'en-tête multi-utilisateurs
 roar.text = Couleur du texte
+roar.text.group = Couleur du texte multi-utilisateurs
+
+roar.single = Utilisateur unique
+roar.single.disable = Désactiver Roar pour les discussions mono-utilisateur
+roar.group = Multi-utilisateur
+roar.group.different = Utiliser différents paramètres pour les chats multi-utilisateurs
+roar.group.disable = Désactiver Roar pour les discussions multi-utilisateurs
+
+roar.display.system = Notification du système d'exploitation
+
+roar.warning.topright = Style de notification Roar personnalisé. Entièrement personnalisable.
+roar.warning.bottomright = Style de notification Roar personnalisé. Entièrement personnalisable.
+roar.warning.toaster = Style de notification d'étincelle. Les couleurs ne sont <u>pas</u> personnalisables.
+roar.warning.system = Notification dépendante du système. Les couleurs et la durée ne sont <u>pas</u> personnalisables.
+roar.warning.system.mac = Utilise le Notification-Center (OSX 10.8 et supérieur).<br>Les couleurs et la durée ne sont <u>pas</u> personnalisables.<br>Voir Mac-Systemsettings -&gt; Notifications pour plus de paramètres.
