--- a/plugins/roar/src/main/resources/i18n/roar_i18n_lt.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_lt.properties
@@ -1,11 +1,10 @@
-
 # Roar language file
 
 roar.settings = Roar Nustatymai
 roar.enabled = Įjungti iššokančius langus
 roar.duration = Rodymo trukmė (ms) (0 = neribojama):
 roar.amount = Maksimalus langų skaičius ekrane (0 = neribojama):
-roar.location = Pakeisti langų atsiradymo pradžios vietą (reikalingas perkrovimas)
+roar.location = Pakeisti langų atsiradymo pradžios vietą
 roar.display.topright = Viršuje dešinėje
 roar.display.bottomright = Apačioje dešinėje
 roar.background = Fono spalva
