--- a/plugins/roar/src/main/resources/i18n/roar_i18n_pl.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_pl.properties
@@ -1,11 +1,10 @@
-
 # Plik jezykowy Panelu ROAR
 
 roar.settings = Ustawienia ROAR
 roar.enabled = Włącz wyskakujące powiadomienia
 roar.duration = Czas trwania w ms (0 = bez limitu):
 roar.amount = Maksymalna ilość powiadomień na ekranie (0 = bez limitu):
-roar.location = Zmiana miejsca wyskakujących powiadomień (wymagany restart)
+roar.location = Zmiana miejsca wyskakujących powiadomień
 roar.display.topright = Górna prawa
 roar.display.bottomright = Dolna prawa
 roar.background = Kolor tła
