--- a/plugins/roar/src/main/resources/i18n/roar_i18n_zh_TW.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_zh_TW.properties
@@ -1,12 +1,29 @@
-
 # Roar language file
+
 roar.settings = 便利貼設定
 roar.enabled = 啟動彈出便利貼
 roar.duration = 便利貼顯示時間為多少毫秒 (0 = 無限時):
 roar.amount = 便利貼彈出在螢幕上的最大範圍 (0 = 無限時):
-roar.location = 變更便利貼彈出位置 (需要重新啟動)
+roar.location = 變更便利貼彈出位置
 roar.display.topright = 右上方
 roar.display.bottomright = 右下方
 roar.background = 便利貼背景顏色
+roar.background.group = 背景顏色多用戶
 roar.header = 便利貼標題顏色
+roar.header.group = 標題顏色多用戶
 roar.text = 便利貼訊息顏色
+roar.text.group = 文本顏色多用戶
+
+roar.single = 單用戶
+roar.single.disable = 為單用戶聊天禁用 Roar
+roar.group = 多用戶
+roar.group.different = 對多用戶聊天使用不同的設置
+roar.group.disable =為多用戶聊天禁用 Roar
+
+roar.display.system = 操作系統通知
+
+roar.warning.topright = 自定義 Roar 通知樣式。完全可定制。
+roar.warning.bottomright = 自定義 Roar 通知樣式。完全可定制
+roar.warning.toaster = Spark 通知樣式。顏色<u>不可</u>自定義
+roar.warning.system = 依賴於系統的通知。顏色和持續時間<u>不可</u>自定義
+roar.warning.system.mac = 使用通知中心（OSX 10.8 及更高版本）。<br>顏色和持續時間<u>不可</u>自定義。<br>請參閱 Mac 系統設置 -&gt;更多設置的通知。
