--- a/plugins/roar/src/main/resources/i18n/roar_i18n_de.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_de.properties
@@ -5,7 +5,7 @@ roar.settings = Roar Einstellungen
 roar.enabled = Popups aktiv
 roar.duration = Dauer in ms (0 = unbegrenzt):
 roar.amount = Maximale Anzahl von Popups (0 = unbegrenzt):
-roar.location = Popupecke auswählen (benötigt Neustart)
+roar.location = Popupecke auswählen
 roar.display.topright = oben rechts
 roar.display.bottomright = unten rechts
 roar.background = Hintergrundfarbe
