--- a/plugins/otr/src/main/resources/i18n/otrplugin_i18n_fr.properties
+++ b/plugins/otr/src/main/resources/i18n/otrplugin_i18n_fr.properties
@@ -13,7 +13,7 @@ otr.key.not.verified.title = Clé non vérifiée
 otr.question.verify = Vérifier?
 otr.key.not.verified.text = Cette clé n'est pas vérifiée!
 otr.start.session.with = Session cryptée par OTR avec {0}
-otr.not.enabled = Vous avez reГ§u une demande de session cryptée OTR. Vous devez activer l'OTR dans le menu Spark/Préférences/OTR.
+otr.not.enabled = Vous avez reçu une demande de session cryptée OTR. Vous devez activer l'OTR dans le menu Spark/Préférences/OTR.
 otr.chat.is.still.encrypted = Cette conversation est toujours cryptée. 
 otr.chat.button.tooltip = Chiffrement du message
 #Table Columns
@@ -26,5 +26,5 @@ otr.key.verified  = Vérifié
 otr.retry = Réessayer
 otr.try.to.connect.for.seconds = Démarrage d'une session chiffrée OTR. {0}s restantes...
 otr.failed.to.establish = Echec lors du démarrage de la session OTR. Timeout.
-otr.successfull = La session OTR a démarré avec succГЁs. Les messages seront chiffrés.
+otr.successfull = La session OTR a démarré avec succès. Les messages seront chiffrés.
 otr.disconnected = La session OTR a été arrêtée. Les messages ne seront plus chiffrés.
